# PythonWEB_hw10

./: pyproject.toml
notes/app_photo/: forms.py  models.py  urls.py  views.py
notes/app_photo/migrations/: 0001_initial.py  0002_alter_picture_path.py
notes/app_photo/static/app_photo/: main.css
notes/app_photo/templates/app_photo/: base.html  index.html  pictures.html  uploads.html
notes/app_users/: apps.py  urls.py  views.py
notes/notes/: settings.py  urls.py
